--- a/style.css
+++ b/style.css
@@ -13,9 +13,13 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 55px;
 }
 ul {
     list-style: none;
     display: flex;
     gap: 48px;
+    padding: 0;
+    margin: 0;
+
 }
