--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body{
     margin: 65px auto;
 }
 
-header {
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -19,7 +19,4 @@ ul {
     list-style: none;
     display: flex;
     gap: 48px;
-    padding: 0;
-    margin: 0;
-
 }
