--- a/style.css
+++ b/style.css
@@ -12,9 +12,10 @@ body{
 }
 
 .page {
-    width: 80rem;
+    max-width: 80rem;
     margin: 0 auto;
     padding-top: 6.5rem;
+    box-sizing: content-box;
 }
 h1 {
      /*ou usando uma quebra de linha*/
@@ -23,7 +24,7 @@ h1 {
     font-size: 4.6rem;
     line-height: 5.6rem;
     font-weight: normal; /* removendo o negrito*/ 
-    width: 40.625rem;
+    max-width: 40.625rem;
 }
 h1 span {
     color: #89c5cc;
@@ -34,7 +35,7 @@ section p {
     color: #7d7987;
     font-size: 1.4rem;
     line-height: 2.8rem;
-    margin: 4.0rem 0;
+    margin: 3.0rem 0;
     width: 40rem;
 }
 
@@ -50,12 +51,12 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 55px;
+    margin-bottom: 5.5rem;
 }
 ul {
     list-style: none;
     display: flex;
-    gap: 48px;
+    gap: 4.8rem;
     margin: 0;
     padding: 0;
 }
@@ -86,7 +87,7 @@ button {
     display: flex;
     align-items: center;
 
-    padding: 14px 32px 15px 32px;
+    padding: 1.4rem 3.2rem 1.5rem 3.2rem;
     gap: 10px;
     cursor: pointer;
 }
@@ -116,23 +117,28 @@ footer a {
 
 /* responsividade */
 
-@media (max-width:780px) {
+@media (max-width: 800px) {
     .page {
         display: flex;
         flex-direction: column;
-        max-width: 430px;
-        padding: 20px;
+        max-width: 50rem;
+        padding: 2.0rem;
     }
     .page > a {
         text-align: center;
         padding-bottom: 10px;
     } 
     main {
+        max-width: fit-content; 
         display: flex;
         flex-direction: column;
     }
     h1 {
         font-size: 3.3rem;
+    }
+    section p {
+        margin-top: -1rem;
+        margin-bottom: 4rem;
     }
     .text {
         text-align: center;
@@ -144,13 +150,13 @@ footer a {
         margin: 0 auto;
     }
 
-   main> img {
+   main > img {
         width: 100%;
     }
 
     nav {
         margin: 0 auto;
-        font-size: 2.2rem;
+        gap: 4.5rem;
 
     }
     footer {
