--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 }
 
 .page {
-    max-width: 80rem;
+    max-width: 90rem;
     margin: 0 auto;
     padding-top: 6.5rem;
     box-sizing: content-box;
@@ -43,6 +43,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 9rem;
 }
 
 
@@ -108,6 +109,7 @@ footer {  /* aqui moveu o footer para baixo*/
     font-size: 14px;
     line-height: 28px;
     margin-top: 80px;
+    margin-right: 10rem;
 }
 footer a {
     color: #1F1534;
@@ -152,9 +154,9 @@ footer a {
     }
 
     nav {
-        font-size: 1.4rem;
+        font-size: 1.6rem;
         margin: 0 auto;
-        gap: 2.5rem;
+        gap: 2.1rem;
 
     }
     footer {
